--- a/style.css
+++ b/style.css
@@ -66,3 +66,56 @@ img {
 }
 
 /* Global CSS END */
+
+/* Header Start */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 100px;
+    box-shadow: 0px 8px 17px 0px rgba(0,0,0,0.19);
+}
+
+.nav-items {
+    display: flex;
+    justify-content: center;
+    align-items: baseline;
+    gap: 30px;
+}
+
+.nav-items>a {
+    text-decoration: none;
+}
+
+.follow {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    background: rgba(11, 2, 35, 0.10);
+    padding: 10px 20px;
+    border-radius: 8px;
+}
+
+.follow>a {
+    text-decoration: none;
+}
+
+@media only screen and (max-width: 600px) {
+    header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 50px;
+        gap: 50px;
+        box-shadow: #272727;
+    }
+
+    .nav-items {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+    }
+
+}
+/* Header End */
